k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: customers.petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customers-service
                port:
                  number: 8081

    - host: vets.petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vets-service
                port:
                  number: 8083

    - host: visits.petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visits-service
                port:
                  number: 8082

    - host: genai.petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: genai-service
                port:
                  number: 8084

    - host: api.petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080
